--- a/Views/Tickets/Delete.cshtml
+++ b/Views/Tickets/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Models.Project
+﻿@model BugTracker.Models.Ticket
 
 @{
     ViewBag.Title = "Delete";
@@ -9,9 +9,17 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Project</h4>
+    <h4>Ticket</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Project.Title)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Project.Title)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Title)
         </dt>
@@ -30,8 +38,9 @@
 
     </dl>
 
-    @using (Html.BeginForm("Delete","Project",FormMethod.Post,new { Model.Id})) {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
+
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
