Minor UI Changes

--- a/Views/Shared/_LayoutSidebar.cshtml
+++ b/Views/Shared/_LayoutSidebar.cshtml
@@ -20,7 +20,7 @@
     <!-- Sidebar Menu -->
     <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <li class="nav-item has-treeview menu-open">
+            <li class="nav-item has-treeview menu">
                 <a href="#" class="nav-link active">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
                     <p>
@@ -30,20 +30,20 @@
                 </a>
                 <ul class="nav nav-treeview">
                     <li class="nav-item">
-                        <a href="/project" class="nav-link">
+                        <a href="/projects" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>All Projects</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/project/create" class="nav-link">
+                        <a href="/projects/create" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Create New Project</p>
                         </a>
                     </li>
                 </ul>
-            </li>\
-            <li class="nav-item has-treeview menu-open">
+            </li>
+            <li class="nav-item has-treeview menu">
                 <a href="#" class="nav-link active">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
                     <p>
@@ -53,15 +53,39 @@
                 </a>
                 <ul class="nav nav-treeview">
                     <li class="nav-item">
-                        <a href="/developer" class="nav-link">
+                        <a href="/developers" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>All Developers</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/developer/create" class="nav-link">
+                        <a href="/developers/create" class="nav-link">
                             <i class="far fa-circle nav-icon"></i>
                             <p>Add New Developer</p>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            
+            <li class="nav-item has-treeview menu">
+                <a href="#" class="nav-link active">
+                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <p>
+                        Tickets
+                        <i class="right fas fa-angle-left"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview">
+                    <li class="nav-item">
+                        <a href="/Tickets" class="nav-link">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>All Tickets</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/Tickets/create" class="nav-link">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Add New Ticket</p>
                         </a>
                     </li>
                 </ul>
