--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -29,11 +29,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.Description)
         </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
+    <td>
+        @Html.ActionLink("View Open Tickets", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+    </td>
     </tr>
 }
 
