--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BugTracker.Models.Project
+﻿@model BugTracker.ViewModels.Project.ProjectViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -8,10 +8,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Project</h4>
         <hr />
@@ -31,14 +31,25 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.SelectedDevelopers, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(d => d.SelectedDevelopers)
+                @Html.ValidationMessageFor(model => model.SelectedDevelopers, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
+        
         </div>
     </div>
+
 }
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
