--- a/Views/Shared/_LayoutSidebar.cshtml
+++ b/Views/Shared/_LayoutSidebar.cshtml
@@ -22,9 +22,9 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
             <li class="nav-item has-treeview menu">
                 <a href="#" class="nav-link active">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <i class="nav-icon fas fa-folder"></i>
                     <p>
-                        Project
+                        Projects
                         <i class="right fas fa-angle-left"></i>
                     </p>
                 </a>
@@ -43,9 +43,34 @@
                     </li>
                 </ul>
             </li>
+
             <li class="nav-item has-treeview menu">
                 <a href="#" class="nav-link active">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <i class="nav-icon fas fa-user-tie"></i>
+                    <p>
+                        Managers
+                        <i class="right fas fa-angle-left"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview">
+                    <li class="nav-item">
+                        <a href="/Managers" class="nav-link">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>All Managers</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/Managers/create" class="nav-link">
+                            <i class="far fa-circle nav-icon"></i>
+                            <p>Add New Manager</p>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            
+            <li class="nav-item has-treeview menu">
+                <a href="#" class="nav-link active">
+                    <i class="nav-icon fas fa-users"></i>
                     <p>
                         Developers
                         <i class="right fas fa-angle-left"></i>
@@ -67,9 +92,10 @@
                 </ul>
             </li>
             
+            
             <li class="nav-item has-treeview menu">
                 <a href="#" class="nav-link active">
-                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <i class="nav-icon fas fa-clipboard-list"></i>
                     <p>
                         Tickets
                         <i class="right fas fa-angle-left"></i>
